# Gody-Art

./: .gitignore  README.md
src/: CMakeLists.txt  Drawing.cpp  Drawing.h  Editor.cpp  Editor.h  Util.cpp  Util.h  main.cpp
